Added the pointer-events property.

--- a/css/opentip.css
+++ b/css/opentip.css
@@ -13,6 +13,7 @@
   -o-transition: none;
   -ms-transition: none;
   transition: none;
+  pointer-events: none;
 }
 .opentip-container.hidden {
   display: none;
