--- a/css/stylus/opentip.styl
+++ b/css/stylus/opentip.styl
@@ -8,7 +8,6 @@
   max-width 300px
   z-index 100
   transition none
-  pointer-events none
 
   &.hidden
     display none
@@ -26,6 +25,7 @@
       padding 0
 
     .close
+      pointer-events auto
       position: absolute;
       top: -12px;
       left: 60px;
@@ -41,12 +41,25 @@
     .loading-indicator
       display block
 
+
+  // Styles
+  // ======
   &.style-dark
+  &.style-alert
     .opentip
       color #f8f8f8
       color rgba(255, 255, 255, 0.9)
       text-shadow 1px 1px 0px rgba(0, 0, 0, 0.2)
 
+  &.style-glass
+    .opentip
+      padding 15px 25px
+      color rgba(0, 94, 183, 0.8)
+      text-shadow 1px 1px 8px rgba(0, 94, 153, 0.3)
+
+
+  // Effects
+  // =======
   &.hide-effect-fade
     transition opacity 1s ease-in-out
     opacity 1
