All tests pass in Firefox 3.6 now.

--- a/css/stylus/opentip.styl
+++ b/css/stylus/opentip.styl
@@ -26,7 +26,8 @@
 
     .close
       pointer-events auto
-      position: absolute;
+      display block
+      position absolute
       top: -12px;
       left: 60px;
       color: rgba(0, 0, 0, 0.5);
