Finished nearly all demos.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
   </head>
   <body>
 
-    <a href="https://github.com/enyo/opentip"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/enyo/opentip"><img style="z-index: 50000; position: fixed; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
 
     <!--[if lte IE 6]>
     <div style="border-bottom: 1px solid #c98F00;background: #FCE509; padding: 10px 15px; position: relative; color: #FF4900;">
@@ -77,7 +77,7 @@
       Original graphics by <strong>Tjandra Mayerhold</strong><br /><br />
       Thanks to:<br /><br />
       &nbsp;&nbsp;<em>Florian Loitsch</em> for teaching me all I know about JavaScript.<br />
-      &nbsp;&nbsp;<em>Hannah Mayr</em> for understanding and encouraging my enthusiasm in open source projects.<br />
+      &nbsp;&nbsp;<em>Hannah Mayr</em> for constantly advising me. <strike>and encouraging my enthusiasm in open source projects</strike>.<br />
       <br />
       
       <div id="license">
