--- a/test/views/index.jade
+++ b/test/views/index.jade
@@ -17,25 +17,32 @@ head
 
   != js('lib/sinon-1.4.2')
 
-  != js('src/opentip')
 
-  != js('lib/ender')
-  :coffeescript
-    ender.noConflict()
+  - if (typeof component != "undefined")
+    != js('build/build.js')
 
-  != js('src/adapter.ender')
-  != js('src/adapter.native')
-  != js('src/adapter.jquery')
-  
+    :coffeescript
+      window.Opentip = require "opentip"
+
+  - else
+    != js('src/opentip')
+
+    != js('lib/ender')
+    :coffeescript
+      ender.noConflict()
+
+    != js('src/adapter.native') // Should stay first so it's the default adapter
+    != js('src/adapter.ender')
+    != js('src/adapter.jquery')
 
   != js('test')
 
   :coffeescript
-    globals = [ "stats", "report" ]
-    for i in [0..500]
-      globals.push "opentip-#{i}"
+    globals = [ "stats", "report", "opentip-*", "jQuery*" ]
     jQuery -> mocha.globals(globals).run()
 
 body
+
+
 
   #mocha
