Updated docs for component.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
       Original graphics by <strong>Tjandra Mayerhold</strong><br /><br />
       Thanks to:<br /><br />
       &nbsp;&nbsp;<em>Florian Loitsch</em> for teaching me all I know about JavaScript.<br />
-      &nbsp;&nbsp;<em>Hannah Mayr</em> for constantly advising me. <strike>and encouraging my enthusiasm in open source projects</strike>.<br />
+      &nbsp;&nbsp;<em>Hannah Mayr</em> for constantly advising me. <strike>understanding and encouraging my enthusiasm in open source projects</strike>.<br />
       <br />
       
       <div id="license">
