Opentip displays now in IE8 and IE9 but IE8 doesn't show the canvas and IE9's close buttons don't work.

--- a/test/views/index.jade
+++ b/test/views/index.jade
@@ -4,7 +4,14 @@ head
 
   title Opentip | Tests
 
+  meta(http-equiv="X-UA-Compatible", content="IE=edge")
+
   != css('mocha.css')
+
+  | <!--[if IE]>
+  != js('excanvas')
+  | <![endif]-->
+
 
   != js('lib/jquery-1.8.0')
   :coffeescript
