Added a few backwards compatibilty defintions.

--- a/css/stylus/general.styl
+++ b/css/stylus/general.styl
@@ -61,7 +61,7 @@ hr
   outside = 25px
   position relative
   height 1px
-  background black
+  background #DADADA
   background linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.1) 5%, rgba(0, 0, 0, 0.1) 95%, rgba(0, 0, 0, 0))
   border none
   margin 60px 0
@@ -185,6 +185,7 @@ header
 
 #demo-boxes
   .box
+    background #E1F3F3
     background linear-gradient(top, #f1f7f0, #d3f0f6)
     width 300px
     height 180px
