--- a/css/general.css
+++ b/css/general.css
@@ -99,7 +99,7 @@ ul a:hover {
 hr {
   position: relative;
   height: 1px;
-  background: #000;
+  background: #dadada;
   background: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(0,0,0,0)), color-stop(0.05, rgba(0,0,0,0.1)), color-stop(0.95, rgba(0,0,0,0.1)), color-stop(1, rgba(0,0,0,0)));
   background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);
   background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);
@@ -262,6 +262,7 @@ header nav ul li a:hover {
   zoom: 1;
 }
 #demo-boxes .box {
+  background: #e1f3f3;
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f1f7f0), color-stop(1, #d3f0f6));
   background: -webkit-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);
   background: -moz-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);
