--- a/css/opentip.css
+++ b/css/opentip.css
@@ -37,6 +37,7 @@
   top: -12px;
   left: 60px;
   color: rgba(0,0,0,0.5);
+  background: rgba(0,0,0,0);
   text-decoration: none;
 }
 .opentip-container .opentip .close span {
