--- a/css/general.css
+++ b/css/general.css
@@ -1,298 +1,58 @@
-code {
-  color: rgba(0,0,0,0.6);
-}
-code .nt,
-code .k,
-code .nv {
-  color: rgba(0,50,0,0.6);
-  font-weight: bold;
-}
-code .na,
-code .p,
-code .nx {
-  color: rgba(0,0,100,0.6);
-}
-code .s,
-code .s2 {
-  color: rgba(150,0,0,0.7);
-  background: rgba(255,0,0,0.04);
-  font-weight: bold;
-}
-code .mi {
-  color: rgba(0,0,150,0.7);
-  background: rgba(0,0,255,0.04);
-  font-weight: bold;
-}
-code .nx {
-  font-weight: bold;
-}
-code .c,
-code .c1 {
-  color: rgba(0,0,0,0.3);
-}
-.opentip-container.style-drop .opentip {
-  padding: 15px 5px;
-  width: 45px;
-  height: 45px;
-  text-align: center;
-  color: rgba(0,0,0,0.5);
-}
-.opentip-container.style-logo {
-  z-index: 20000 !important;
-}
-.opentip-container.style-logo .opentip {
-  color: #f8f8f8;
-  color: rgba(255,255,255,0.9);
-  text-shadow: 1px 1px 0px rgba(0,0,0,0.2);
-  font-size: 15px;
-}
-body,
-body * {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
-body {
-  font: 13px/150% "Open sans", sans-serif;
-  padding: 0 0 100px 0;
-  margin: 0;
-  background: #f2f2f2 url("../images/grain.png") fixed repeat left top;
-}
-h1,
-h2,
-h3,
-h4 {
-  font-family: "Raleway", "Helvetica neue", sans-serif;
-  font-weight: 100;
-}
-h1 {
-  font-size: 40px;
-  line-height: 130%;
-}
-h2 {
-  font-size: 35px;
-  line-height: 130%;
-}
-h3 {
-  font-size: 24px;
-  line-height: 130%;
-  color: rgba(0,0,0,0.6);
-}
-h4 {
-  font-size: 20px;
-  line-height: 130%;
-}
-p a,
-ul a {
-  color: #00a;
-  text-decoration: none;
-  -webkit-transition: color 0.2s ease-in-out;
-  -moz-transition: color 0.2s ease-in-out;
-  -o-transition: color 0.2s ease-in-out;
-  -ms-transition: color 0.2s ease-in-out;
-  transition: color 0.2s ease-in-out;
-}
-p a:hover,
-ul a:hover {
-  color: #00f;
-}
-hr {
-  position: relative;
-  height: 1px;
-  background: #dadada;
-  background: -webkit-gradient(linear, left top, right top, color-stop(0, rgba(0,0,0,0)), color-stop(0.05, rgba(0,0,0,0.1)), color-stop(0.95, rgba(0,0,0,0.1)), color-stop(1, rgba(0,0,0,0)));
-  background: -webkit-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);
-  background: -moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);
-  background: -o-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);
-  background: -ms-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);
-  background: linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);
-  border: none;
-  margin: 60px 0;
-  margin-left: -25px;
-  width: 1010px;
-}
-code {
-  font-family: menlo, monospace;
-}
-p > code,
-li > code {
-  border: 1px dotted rgba(151,199,135,0.4);
-  background: rgba(181,239,175,0.1);
-  padding: 1px 2px;
-  color: rgba(51,109,35,0.6);
-}
-pre {
-  margin: 30px 0;
-}
-p {
-  color: #333;
-}
-#main,
-footer,
-header > div {
-  width: 960px;
-  margin: 0 auto;
-  position: relative;
-}
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  background: #f2f2f2 url("../images/grain.png") fixed repeat left top;
-  display: block;
-  z-index: 1000;
-}
-header #header-shadow,
-header #header-shadow-line {
-  opacity: 0;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
-  filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.5s ease-in-out;
-  -moz-transition: opacity 0.5s ease-in-out;
-  -o-transition: opacity 0.5s ease-in-out;
-  -ms-transition: opacity 0.5s ease-in-out;
-  transition: opacity 0.5s ease-in-out;
-}
-body.scroll header #header-shadow,
-body.scroll header #header-shadow-line {
-  opacity: 1;
-  -ms-filter: none;
-  filter: none;
-}
-header #logo {
-  display: block;
-  position: absolute;
-  top: 0;
-  left: -90px;
-  -webkit-transition: top 0.5s ease-in-out;
-  -moz-transition: top 0.5s ease-in-out;
-  -o-transition: top 0.5s ease-in-out;
-  -ms-transition: top 0.5s ease-in-out;
-  transition: top 0.5s ease-in-out;
-  background: url("../images/logo.png") no-repeat left top;
-  width: 360px;
-  height: 162px;
-  z-index: 200;
-}
-header #logo span {
-  display: none;
-}
-body.scroll header #logo {
-  top: -30px;
-}
-header hr {
-  margin-bottom: 0;
-  margin-top: 0;
-}
-header #header-shadow {
-  width: 800px;
-  height: 20px;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  margin-left: -400px;
-  -webkit-border-radius: 100%;
-  border-radius: 100%;
-  -webkit-box-shadow: 0 0 30px rgba(0,0,0,0.2);
-  box-shadow: 0 0 30px rgba(0,0,0,0.2);
-}
-header nav {
-  font-family: "Raleway", "Helvetica neue", sans-serif;
-  font-weight: 100;
-  font-size: 18px;
-  line-height: 150%;
-  display: block;
-  position: relative;
-  text-align: right;
-  height: 75px;
-  background: #f2f2f2 url("../images/grain.png") repeat left top;
-  z-index: 100;
-}
-header nav ul {
-  position: absolute;
-  top: 50px;
-  right: 0;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  -webkit-transition: top 0.5s ease-in-out;
-  -moz-transition: top 0.5s ease-in-out;
-  -o-transition: top 0.5s ease-in-out;
-  -ms-transition: top 0.5s ease-in-out;
-  transition: top 0.5s ease-in-out;
-}
-body.scroll header nav ul {
-  top: 23px;
-}
-header nav ul li {
-  padding: 0;
-  list-style: none;
-  display: inline-block;
-}
-header nav ul li.active a {
-  border-bottom: 2px solid #000;
-  color: rgba(0,0,0,0.8);
-}
-header nav ul li a {
-  color: rgba(0,0,0,0.4);
-  text-decoration: none;
-  display: block;
-  padding: 0 0px;
-  margin: 0 5px;
-  -webkit-transition: color 0.3s ease-in-out;
-  -moz-transition: color 0.3s ease-in-out;
-  -o-transition: color 0.3s ease-in-out;
-  -ms-transition: color 0.3s ease-in-out;
-  transition: color 0.3s ease-in-out;
-  -webkit-font-smoothing: subpixel-antialiased;
-}
-header nav ul li a:hover {
-  color: rgba(0,0,0,0.8);
-}
-#main {
-  padding-top: 180px;
-}
-#main #intro {
-  font-size: 36px;
-  margin: 20px 0;
-  color: rgba(0,0,0,0.4);
-}
-#demo-boxes {
-  zoom: 1;
-}
-#demo-boxes .box {
-  background: #e1f3f3;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f1f7f0), color-stop(1, #d3f0f6));
-  background: -webkit-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);
-  background: -moz-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);
-  background: -o-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);
-  background: -ms-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);
-  background: linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);
-  width: 300px;
-  height: 180px;
-  padding: 25px 35px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  -webkit-box-shadow: 1px 1px 12px rgba(0,0,0,0.1);
-  box-shadow: 1px 1px 12px rgba(0,0,0,0.1);
-  float: left;
-  margin: 10px;
-}
-#demo-boxes .box h2 {
-  margin: 0 0 10px 0;
-}
-#demo-boxes .box p {
-  color: rgba(0,0,0,0.6);
-}
-#demo-boxes:before,
-#demo-boxes:after {
-  content: "";
-  display: table;
-}
-#demo-boxes:after {
-  clear: both;
-}
-footer {
-  color: rgba(0,0,0,0.4);
-}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td{margin:0;padding:0;border:0;outline:0;font-weight:inherit;font-style:inherit;font-family:inherit;font-size:100%;vertical-align:baseline}
+body{line-height:1;color:#000;background:#fff}
+ol,ul{list-style:none}
+table{border-collapse:separate;border-spacing:0;vertical-align:middle}
+caption,th,td{text-align:left;font-weight:normal;vertical-align:middle}
+a img{border:none}
+article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{margin:0;padding:0;border:0;outline:0;display:block}
+audio,canvas,video{display:inline-block;*display:inline;*zoom:1}
+audio:not([controls]),[hidden]{display:none}
+code{color:rgba(0,0,0,0.6);}
+code .nt,code .k,code .nv{color:rgba(0,50,0,0.6);font-weight:bold}
+code .na,code .p,code .nx{color:rgba(0,0,100,0.6)}
+code .s,code .s2{color:rgba(150,0,0,0.7);background:rgba(255,0,0,0.04);font-weight:bold}
+code .mi{color:rgba(0,0,150,0.7);background:rgba(0,0,255,0.04);font-weight:bold}
+code .nx{font-weight:bold}
+code .c,code .c1{color:rgba(0,0,0,0.3)}
+.opentip-container.style-drop .opentip{padding:15px 5px;width:45px;height:45px;text-align:center;color:rgba(0,0,0,0.5)}
+.opentip-container.style-logo{z-index:20000 !important;}
+.opentip-container.style-logo .opentip{color:#f8f8f8;color:rgba(255,255,255,0.9);text-shadow:1px 1px 0 rgba(0,0,0,0.2);font-size:15px}
+body,body *{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}
+body{font:13px/150% "Open sans",sans-serif;padding:0 0 100px 0;margin:0;background:#f2f2f2 url("../images/grain.png") fixed repeat left top}
+h1,h2,h3,h4{font-family:"Raleway","Helvetica neue",sans-serif;font-weight:100}
+h1{font-size:40px;line-height:130%;margin:26px 0}
+h2{font-size:35px;line-height:130%;margin:25px 0}
+h3{font-size:24px;line-height:130%;color:rgba(0,0,0,0.6);margin:24px 0}
+h4{font-size:20px;line-height:130%;margin:23px 0}
+p a,ul a{color:#00a;text-decoration:none;-webkit-transition:color .2s ease-in-out;-moz-transition:color .2s ease-in-out;-o-transition:color .2s ease-in-out;-ms-transition:color .2s ease-in-out;transition:color .2s ease-in-out;}
+p a:hover,ul a:hover{color:#00f}
+hr{position:relative;height:1px;background:#dadada;background:-webkit-gradient(linear, left top, right top, color-stop(0, rgba(0,0,0,0)), color-stop(0.05, rgba(0,0,0,0.1)), color-stop(0.95, rgba(0,0,0,0.1)), color-stop(1, rgba(0,0,0,0)));background:-webkit-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:-moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:-o-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:-ms-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);border:none;margin:60px 0;margin-left:-25px;width:1010px}
+code{font-family:menlo,monospace}
+p > code,li > code{border:1px dotted rgba(151,199,135,0.4);background:rgba(181,239,175,0.1);padding:1px 2px;color:rgba(51,109,35,0.6)}
+pre{margin:30px 0}
+p{color:#333}
+#main,#footer,#header > div{width:960px;margin:0 auto;position:relative}
+#header{position:fixed;top:0;left:0;right:0;background:#f2f2f2 url("../images/grain.png") fixed repeat left top;display:block;z-index:1000;}
+#header #header-shadow,#header #header-shadow-line{opacity:0;-ms-filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=0);filter:alpha(opacity=0);-webkit-transition:opacity .5s ease-in-out;-moz-transition:opacity .5s ease-in-out;-o-transition:opacity .5s ease-in-out;-ms-transition:opacity .5s ease-in-out;transition:opacity .5s ease-in-out;}
+body.scroll #header #header-shadow,body.scroll #header #header-shadow-line{opacity:1;-ms-filter:none;filter:none}
+#header #logo{display:block;position:absolute;top:0;left:-90px;-webkit-transition:top .5s ease-in-out;-moz-transition:top .5s ease-in-out;-o-transition:top .5s ease-in-out;-ms-transition:top .5s ease-in-out;transition:top .5s ease-in-out;background:url("../images/logo.png") no-repeat left top;width:360px;height:162px;z-index:200;}
+#header #logo span{display:none}
+body.scroll #header #logo{top:-30px}
+#header hr{margin-bottom:0;margin-top:0}
+#header #header-shadow{width:800px;height:20px;position:absolute;bottom:0;left:50%;margin-left:-400px;-webkit-border-radius:100%;border-radius:100%;-webkit-box-shadow:0 0 30px rgba(0,0,0,0.2);box-shadow:0 0 30px rgba(0,0,0,0.2)}
+#header nav{font-family:"Raleway","Helvetica neue",sans-serif;font-weight:100;font-size:18px;line-height:150%;display:block;position:relative;text-align:right;height:75px;background:#f2f2f2 url("../images/grain.png") repeat left top;z-index:100;}
+#header nav ul{position:absolute;top:50px;right:0;margin:0;padding:0;list-style:none;-webkit-transition:top .5s ease-in-out;-moz-transition:top .5s ease-in-out;-o-transition:top .5s ease-in-out;-ms-transition:top .5s ease-in-out;transition:top .5s ease-in-out;}
+body.scroll #header nav ul{top:23px}
+#header nav ul li{padding:0;list-style:none;display:inline-block;}
+#header nav ul li.active a{border-bottom:2px solid #000;color:#333}
+#header nav ul li a{color:#bbb;text-decoration:none;display:block;padding:0 0;margin:0 5px;-webkit-transition:color .3s ease-in-out;-moz-transition:color .3s ease-in-out;-o-transition:color .3s ease-in-out;-ms-transition:color .3s ease-in-out;transition:color .3s ease-in-out;-webkit-font-smoothing:subpixel-antialiased;}
+#header nav ul li a:hover{color:rgba(0,0,0,0.8)}
+#main{padding-top:180px;}
+#main #intro{font-size:36px;margin:20px 0;color:rgba(0,0,0,0.4)}
+#demo-boxes{zoom:1}
+#demo-boxes .box{background:#e1f3f3;background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #f1f7f0), color-stop(1, #d3f0f6));background:-webkit-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);background:-moz-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);background:-o-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);background:-ms-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);background:linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);width:300px;height:180px;padding:25px 35px;-webkit-border-radius:5px;border-radius:5px;-webkit-box-shadow:1px 1px 12px rgba(0,0,0,0.1);box-shadow:1px 1px 12px rgba(0,0,0,0.1);float:left;margin:10px;}
+#demo-boxes .box h2{margin:0 0 10px 0}
+#demo-boxes .box p{color:rgba(0,0,0,0.6)}
+#demo-boxes:before,#demo-boxes:after{content:"";display:table}
+#demo-boxes:after{clear:both}
+#footer{color:#aaa}
