--- a/test/views/index.jade
+++ b/test/views/index.jade
@@ -1,4 +1,4 @@
-html5
+!!!
 head
   meta(charset="utf-8")
 
@@ -14,6 +14,7 @@ head
 
 
   != js('lib/jquery-1.8.0')
+  != js('lib/prototype-1.7.1')
   :coffeescript
     jQuery.noConflict()
 
@@ -41,6 +42,7 @@ head
     != js('src/adapter.native') // Should stay first so it's the default adapter
     != js('src/adapter.ender')
     != js('src/adapter.jquery')
+    != js('src/adapter.prototype')
 
   != js('test')
 
