--- a/css/general.css
+++ b/css/general.css
@@ -24,13 +24,18 @@ h1{font-size:40px;line-height:130%;margin:26px 0}
 h2{font-size:35px;line-height:130%;margin:25px 0}
 h3{font-size:24px;line-height:130%;color:rgba(0,0,0,0.6);margin:24px 0}
 h4{font-size:20px;line-height:130%;margin:23px 0}
+p{margin:13px 0}
 p a,ul a{color:#00a;text-decoration:none;-webkit-transition:color .2s ease-in-out;-moz-transition:color .2s ease-in-out;-o-transition:color .2s ease-in-out;-ms-transition:color .2s ease-in-out;transition:color .2s ease-in-out;}
 p a:hover,ul a:hover{color:#00f}
 hr{position:relative;height:1px;background:#dadada;background:-webkit-gradient(linear, left top, right top, color-stop(0, rgba(0,0,0,0)), color-stop(0.05, rgba(0,0,0,0.1)), color-stop(0.95, rgba(0,0,0,0.1)), color-stop(1, rgba(0,0,0,0)));background:-webkit-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:-moz-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:-o-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:-ms-linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);background:linear-gradient(left, rgba(0,0,0,0) 0%, rgba(0,0,0,0.1) 5%, rgba(0,0,0,0.1) 95%, rgba(0,0,0,0) 100%);border:none;margin:60px 0;margin-left:-25px;width:1010px}
 code{font-family:menlo,monospace}
-p > code,li > code{border:1px dotted rgba(151,199,135,0.4);background:rgba(181,239,175,0.1);padding:1px 2px;color:rgba(51,109,35,0.6)}
+p > code,li > code{border:1px dotted #cbe3c5;background:#eff5ee;padding:1px 2px;color:#7fa475}
 pre{margin:30px 0}
 p{color:#333}
+strong{font-weight:bold}
+em{font-style:italic}
+blockquote{border-left:2px solid #c0c0c0;background:rgba(0,0,0,0.02);}
+blockquote p{padding:8px 15px}
 #main,#footer,#header > div{width:960px;margin:0 auto;position:relative}
 #header{position:fixed;top:0;left:0;right:0;background:#f2f2f2 url("../images/grain.png") fixed repeat left top;display:block;z-index:1000;}
 #header #header-shadow,#header #header-shadow-line{opacity:0;-ms-filter:progid:DXImageTransform.Microsoft.Alpha(Opacity=0);filter:alpha(opacity=0);-webkit-transition:opacity .5s ease-in-out;-moz-transition:opacity .5s ease-in-out;-o-transition:opacity .5s ease-in-out;-ms-transition:opacity .5s ease-in-out;transition:opacity .5s ease-in-out;}
@@ -52,7 +57,7 @@ body.scroll #header nav ul{top:23px}
 #demo-boxes{zoom:1}
 #demo-boxes .box{background:#e1f3f3;background:-webkit-gradient(linear, left top, left bottom, color-stop(0, #f1f7f0), color-stop(1, #d3f0f6));background:-webkit-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);background:-moz-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);background:-o-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);background:-ms-linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);background:linear-gradient(top, #f1f7f0 0%, #d3f0f6 100%);width:300px;height:180px;padding:25px 35px;-webkit-border-radius:5px;border-radius:5px;-webkit-box-shadow:1px 1px 12px rgba(0,0,0,0.1);box-shadow:1px 1px 12px rgba(0,0,0,0.1);float:left;margin:10px;}
 #demo-boxes .box h2{margin:0 0 10px 0}
-#demo-boxes .box p{color:rgba(0,0,0,0.6)}
+#demo-boxes .box p{color:#5b6262}
 #demo-boxes:before,#demo-boxes:after{content:"";display:table}
 #demo-boxes:after{clear:both}
 #footer{color:#aaa}
