--- a/css/stylus/general.styl
+++ b/css/stylus/general.styl
@@ -55,6 +55,8 @@ h4
   line-height 130%
   margin 23px 0
 
+p
+  margin 13px 0
 
 p
 ul
@@ -82,16 +84,27 @@ code
 
 p > code
 li > code
-  border 1px dotted rgba(151, 199, 135, 0.4)
-  background rgba(181, 239, 175, 0.1)
+  border 1px dotted #CBE3C5
+  background #EFF5EE
   padding 1px 2px
-  color rgba(51, 109, 35, 0.6)
+  color #7FA475
 
 pre
   margin 30px 0
 
 p
   color #333
+
+strong
+  font-weight bold
+em
+  font-style italic
+
+blockquote
+  border-left 2px solid silver
+  background rgba(0, 0, 0, 0.02)
+  p
+    padding 8px 15px
 
 #main, #footer, #header > div
   width page-width
@@ -208,7 +221,7 @@ p
       margin 0 0 10px 0
 
     p
-      color rgba(0, 0, 0, 0.6)
+      color #5B6262
   clearfix()
 
 
