--- a/test/views/playground.jade
+++ b/test/views/playground.jade
@@ -20,9 +20,10 @@ head
   //- != js('src/adapter.ender')
 
 
-  != js('lib/jquery-1.8.0')
+  //- != js('lib/jquery-1.8.0')
+  != js('lib/prototype-1.7.1')
   != js('src/opentip')
-  != js('src/adapter.jquery')
+  != js('src/adapter.prototype')
 
   //- != js('src/opentip')
   //- != js('src/adapter.native')
