Only opentips that follow the mouse have no pointer events now.
Closes #10

--- a/css/opentip.css
+++ b/css/opentip.css
@@ -15,6 +15,9 @@
   transition: none;
   pointer-events: none;
 }
+.opentip-container.fixed {
+  pointer-events: auto;
+}
 .opentip-container.hidden {
   display: none;
 }
