--- a/css/stylus/general.styl
+++ b/css/stylus/general.styl
@@ -101,10 +101,11 @@ em
   font-style italic
 
 blockquote
-  border-left 2px solid silver
-  background rgba(0, 0, 0, 0.02)
+  border 1px solid #e8e8e8
+  background rgba(0, 0, 0, 0.01)
+  box-shadow 2px 2px 15px #e5e5e5
   p
-    padding 8px 15px
+    padding 8px 25px
 
 
 
@@ -113,7 +114,6 @@ blockquote
     width 50%
     float left
     padding-right 40px
-    border-right 1px solid #e3e3e3
   .right
     width 50%
     float right
