--- a/css/stylus/layout.styl
+++ b/css/stylus/layout.styl
@@ -122,14 +122,16 @@
 
 .columns
   margin-top 140px
+  margin-bottom 140px
+
 #show-your-work
-  margin-top 30px
+  margin-top 10px
   min-height 200px
   img
     float left
+    position relative
+    top -20px
     margin-right 20px
-  p
-    padding-top 50px
 
 #footer
   color #aaa
