--- a/css/layout.css
+++ b/css/layout.css
@@ -7,7 +7,7 @@ body.scroll #header #header-shadow,body.scroll #header #header-shadow-line{opaci
 body.scroll #header #logo{top:-30px}
 #header hr{margin-bottom:0;margin-top:0}
 #header #header-shadow{width:800px;height:20px;absolute:bottom left 50%;margin-left:-400px;border-radius:100%;box-shadow:0 0 30px rgba(0,0,0,0.2)}
-#header nav{font-family:"Raleway","Helvetica neue",sans-serif;font-weight:100;font-size:18px;line-height:150%;display:block;position:relative;text-align:right;height:75px;background:#f2f2f2 url("../images/grain.png") repeat left top;z-index:100;}
+#header nav{font-family:"Raleway","Helvetica neue",sans-serif;font-weight:100;font-size:20px;line-height:150%;display:block;position:relative;text-align:right;height:75px;background:#f2f2f2 url("../images/grain.png") repeat left top;z-index:100;}
 #header nav ul{absolute:top 50px right;margin:0;padding:0;list-style:none;transition:top .5s ease-in-out;}
 body.scroll #header nav ul{top:23px}
 #header nav ul li{padding:0;list-style:none;display:inline-block;}
@@ -19,4 +19,8 @@ body.scroll #header nav ul{top:23px}
 #demo-boxes .box{background:#e1f3f3;background:linear-gradient(top,#f1f7f0,#d3f0f6);width:300px;height:180px;padding:25px 35px;border-radius:5px;box-shadow:1px 1px 12px rgba(0,0,0,0.1);float:left;margin:10px;}
 #demo-boxes .box h2{margin:0 0 10px 0}
 #demo-boxes .box p{color:#5b6262}
+.columns{margin-top:140px;margin-bottom:140px}
+#show-your-work{margin-top:30px;min-height:200px;}
+#show-your-work img{float:left;margin-right:20px}
+#show-your-work p{padding-top:50px}
 #footer{color:#aaa}
