Making sure the stylesheets and javascripts are not cached.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,10 +19,9 @@
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,700|Raleway:100" rel="stylesheet" type="text/css" />
 
-    <style type="text/css">
-      @import "js/build/build.css";
-      @import "css/general.css";
-    </style>
+    <link href="/js/build/build.css?v=2" rel="stylesheet" type="text/css" />
+    <link href="/css/general.css?v=2" rel="stylesheet" type="text/css" />
+
 
 
     <!--[if lte IE 8]>
@@ -30,7 +29,7 @@
     <![endif]-->
 
 
-    <script type="text/javascript" src="js/build/build.js"></script>
+    <script type="text/javascript" src="js/build/build.js?v=2"></script>
     <script type="text/javascript">
       require("boot");
     </script>
